# ClassicGames

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flag.txt
assets/icons/: Icons.aps  Icons.rc
assets/levels/: MUSform.txt  beethoven.mid  dmsp1666.txt
assets/quiz/: config.json  questions.json
assets/rpg/: blue.ase  blue_character.xcf  cell.ase  characters.xcf  cursor.ase  cursor.xcf  cursors.xcf  debug.xcf  error.xcf  frame.xcf  green.ase  level_01.json  level_01.xcf  level_02.xcf  mario.ase  particles.xcf  red.ase  select.xcf  template.ase  template_blue.ase  template_blue.json  test_tiles.xcf  tile1.xcf  tile2.xcf  tile3.xcf  world.json  yellow.ase
assets/textures/: texture_miza.xcf
sources/: main.cpp  main.cpp~
sources/Doom/: Automap.cpp  Automap.hpp  Camera.cpp  Camera.hpp  Doom.cpp  Doom.hpp  Statusbar.cpp  Statusbar.hpp  Wad.cpp  Wad.hpp
sources/Doom/Action/: AbstractAction.cpp  AbstractAction.hpp  AbstractLevelingAction.cpp  AbstractLevelingAction.hpp  AbstractStoppableAction.cpp  AbstractStoppableAction.hpp  AbstractTypeAction.cpp  AbstractTypeAction.hpp  BlinkLightingAction.cpp  BlinkLightingAction.hpp  CeilingLevelingAction.cpp  CeilingLevelingAction.hpp  CrusherLevelingAction.cpp  CrusherLevelingAction.hpp  DoorLevelingAction.cpp  DoorLevelingAction.hpp  FlickerLightingAction.cpp  FlickerLightingAction.hpp  FloorLevelingAction.cpp  FloorLevelingAction.hpp  LiftLevelingAction.cpp  LiftLevelingAction.hpp  OpenLevelingAction.cpp  OpenLevelingAction.hpp  OscillateLightingAction.cpp  OscillateLightingAction.hpp  PlatformLevelingAction.cpp  PlatformLevelingAction.hpp  RandomLightingAction.cpp  RandomLightingAction.hpp
sources/Doom/Flat/: AbstractFlat.cpp  AbstractFlat.hpp  AnimatedFlat.cpp  AnimatedFlat.hpp  StaticFlat.cpp  StaticFlat.hpp
sources/Doom/Linedef/: AbstractLinedef.cpp  AbstractLinedef.hpp  AbstractTriggerableLinedef.cpp  AbstractTriggerableLinedef.hpp  ActionTriggerableLinedef.cpp  ActionTriggerableLinedef.hpp  DonutTriggerableLinedef.cpp  DonutTriggerableLinedef.hpp  ExitLinedef.cpp  ExitLinedef.hpp  LightTriggerableLinedef.cpp  LightTriggerableLinedef.hpp  NormalLinedef.cpp  NormalLinedef.hpp  NullLinedef.cpp  NullLinedef.hpp  ScrollerLinedef.cpp  ScrollerLinedef.hpp  StairTriggerableLinedef.cpp  StairTriggerableLinedef.hpp  StopTriggerableLinedef.cpp  StopTriggerableLinedef.hpp  TeleporterTriggerableLinedef.cpp  TeleporterTriggerableLinedef.hpp  TriggerableLinedef.cpp  TriggerableLinedef.hpp
sources/Doom/Scenes/: DoomScene.cpp  DoomScene.hpp  GameDoomScene.cpp  GameDoomScene.hpp  IntermissionDoomScene.cpp  IntermissionDoomScene.hpp  MenuDoomScene.cpp  MenuDoomScene.hpp  SplashDoomScene.cpp  SplashDoomScene.hpp  StartDoomScene.cpp  StartDoomScene.hpp  TextDoomScene.cpp  TextDoomScene.hpp  TransitionDoomScene.cpp  TransitionDoomScene.hpp
sources/Doom/Sector/: AbstractLightSector.cpp  AbstractLightSector.hpp  AbstractSector.cpp  AbstractSector.hpp  BlinkLightingAction.cpp  BlinkLightingAction.hpp  CeilingLevelingAction.cpp  CeilingLevelingAction.hpp  DoorLevelingAction.cpp  DoorLevelingAction.hpp  FixedLightSector.cpp  FixedLightSector.hpp  FlickerLightSector.cpp  FlickerLightSector.hpp  FlickerLightingAction.cpp  FlickerLightingAction.hpp  FloorLevelingAction.cpp  FloorLevelingAction.hpp  GlowLightSector.cpp  GlowLightSector.hpp  NormalSector.cpp  NormalSector.hpp  OscillateLightingAction.cpp  OscillateLightingAction.hpp  RandomLightSector.cpp  RandomLightSector.hpp  RandomLightingAction.cpp  RandomLightingAction.hpp
sources/Doom/States/: DoomState.cpp  DoomState.hpp  GameDoomState.cpp  GameDoomState.hpp  MenuDoomState.cpp  (+11 more)
sources/GameBoyColor/: AudioProcessingUnit.cpp  AudioProcessingUnit.hpp  CentralProcessingUnit.cpp  CentralProcessingUnit.hpp  EmulationScene.cpp  EmulationScene.hpp  GameBoyColor.cpp  GameBoyColor.hpp  MemoryBankController.cpp  MemoryBankController.hpp  MemoryBankController1.cpp  MemoryBankController1.hpp  MemoryBankController2.cpp  MemoryBankController2.hpp  MemoryBankController3.cpp  MemoryBankController3.hpp  MemoryBankController5.cpp  MemoryBankController5.hpp  MenuScene.cpp  MenuScene.hpp  PixelProcessingUnit.cpp  PixelProcessingUnit.hpp  SelectionScene.cpp  SelectionScene.hpp
sources/Math/: Box.cpp  Box.hpp  Math.cpp  Math.hpp  Matrix.cpp  Matrix.hpp  Transformable2D.cpp  Transformable2D.hpp  Vector.cpp  Vector.hpp
sources/Quiz/: BlindtestQuizScene.cpp  BlindtestQuizScene.hpp  ControllerQuizScene.cpp  ControllerQuizScene.hpp  FastestQuizScene.cpp  FastestQuizScene.hpp  MillionaireQuizScene.cpp  MillionaireQuizScene.hpp  QuestionQuizScene.cpp  QuestionQuizScene.hpp  Quiz.cpp  Quiz.hpp  QuizScene.cpp  QuizScene.hpp  ScoresQuizScene.cpp  ScoresQuizScene.hpp
sources/RolePlayingGame/: Camera.cpp  Camera.hpp  Cell.cpp  Cell.hpp  ClientScene.cpp  ClientScene.hpp  Color.cpp  Color.hpp  Components.cpp  Components.hpp  Entities.hpp  Entity.cpp  Entity.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  GameClient.cpp  GameClient.hpp  GameScene.cpp  GameScene.hpp  GameServer.cpp  GameServer.hpp  Icon.cpp  Icon.hpp  Level.cpp  Level.hpp  Model.cpp  Model.hpp  Server.cpp  Server.hpp  Sprite.cpp  Sprite.hpp  Systems.cpp  Systems.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp  Texture.cpp  Texture.hpp  Types.cpp  (+5 more)
sources/Scenes/: AbstractScene.cpp  AbstractScene.hpp  ExitScene.cpp  ExitScene.hpp  LoadingScene.cpp  LoadingScene.hpp  MessageScene.cpp  MessageScene.hpp  MidiScene.cpp  MidiScene.hpp  SceneMachine.cpp  SceneMachine.hpp  SplashScene.cpp  SplashScene.hpp  StartScene.cpp  StartScene.hpp
sources/States/: AbstractState.cpp  AbstractState.hpp  DoomState.cpp  DoomState.hpp  GameState.cpp  GameState.hpp  LoadingState.cpp  LoadingState.hpp  MessageState.cpp  MessageState.hpp  SplashState.cpp  SplashState.hpp  StartState.cpp  StartState.hpp  StateMachine.cpp  StateMachine.hpp
sources/System/: Config.cpp  Config.hpp  JavaScriptObjectNotation.cpp  JavaScriptObjectNotation.hpp  Midi.cpp  Midi.hpp  Pitch.cpp  Pitch.hpp  Sound.cpp  Sound.hpp  Utilities.cpp  Utilities.hpp  Window.cpp  Window.hpp
(+98 files in other folders)
